fix pjava